# ml

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  evaluate_system.py  plan.txt  pyproject.toml  pytest.ini  quickstart.py  requirements.txt  run_demo.py  setup.py  start_system.sh  test_gemini.py
notebooks/: demo_walkthrough.ipynb
src/: config.py  database.py
src/api/: dependencies.py  main.py
src/comparison/: comparator.py
src/etl/: data_loader.py  ingest_data.py  text_processor.py
src/indexing/: build_index.py  embeddings.py  faiss_index.py
src/models/: ctr_model.py  schemas.py
src/qa/: llm_client.py  qa_engine.py
src/recommendations/: recommender.py
src/retrieval/: search_engine.py
src/ui/: app.py  components.py
tests/: conftest.py  test_api.py  test_comparison.py  test_data_processing.py  test_evaluation.py  test_integration.py  test_qa.py  test_recommendations.py  test_retrieval.py
